--- a/charts/kubezero-calico/values.yaml
+++ b/charts/kubezero-calico/values.yaml
@@ -1,5 +1,8 @@
 installCRDs: false
 
+image:
+  tag: ""
+
 network: vxlan
 
 mtu: 8941
@@ -7,9 +10,3 @@ mtu: 8941
 loglevel: Warning
 
 prometheus: false
-
-customIPPool: {}
-
-# Soon to be removed
-migration: false
-
