more istio cleanup

--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -134,6 +134,7 @@ spec:
       jwtPolicy: first-party-jwt
       logAsJson: true
       omitSidecarInjectorConfigMap: true
+      operatorManageWebhooks: true
       proxy:
         accessLogEncoding: JSON
         autoInject: disabled
