Re-enable access logs

--- a/charts/kubezero-istio/templates/istio-private-ingress.yaml
+++ b/charts/kubezero-istio/templates/istio-private-ingress.yaml
@@ -64,6 +64,9 @@ spec:
             - path: spec.template.spec.terminationGracePeriodSeconds
               value: 90
 
+  meshConfig:
+    accessLogFile: /dev/stdout
+
   values:
     gateways:
       istio-ingressgateway:
