--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -87,6 +87,8 @@ spec:
 
     telemetry:
       enabled: false
+  meshConfig:
+    accessLogFile: /dev/stdout
   values:
     gateways:
       istio-ingressgateway:
