Re-enable JSON access logs

--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -89,6 +89,7 @@ spec:
       enabled: false
   meshConfig:
     accessLogFile: /dev/stdout
+    accessLogEncoding: json
   values:
     gateways:
       istio-ingressgateway:
