Set JSON for access logs

--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -89,7 +89,7 @@ spec:
       enabled: false
   meshConfig:
     accessLogFile: /dev/stdout
-    accessLogEncoding: json
+    accessLogEncoding: 'JSON'
   values:
     gateways:
       istio-ingressgateway:
