--- a/charts/kubezero-istio/templates/istio-private-ingress.yaml
+++ b/charts/kubezero-istio/templates/istio-private-ingress.yaml
@@ -91,11 +91,13 @@ spec:
           {{- end }}
         - name: http2
           port: 80
+          targetPort: 8080
           {{- if eq .Values.ingress.type "NodePort" }}
           nodePort: 31080
           {{- end }}
         - name: https
           port: 443
+          targetPort: 8443
           {{- if eq .Values.ingress.type "NodePort" }}
           nodePort: 31443
           {{- end }}
