Istio is really picky

--- a/charts/kubezero-istio/templates/istio-private-ingress.yaml
+++ b/charts/kubezero-istio/templates/istio-private-ingress.yaml
@@ -66,7 +66,7 @@ spec:
 
   meshConfig:
     accessLogFile: /dev/stdout
-    accessLogEncoding: json
+    accessLogEncoding: 'JSON'
 
   values:
     gateways:
