Disable default poddisruptionbudgets, replace with individual todo

--- a/charts/kubezero-istio/templates/istio-private-ingress.yaml
+++ b/charts/kubezero-istio/templates/istio-private-ingress.yaml
@@ -120,5 +120,7 @@ spec:
     global:
       jwtPolicy: first-party-jwt
       logAsJson: true
-      omitSidecarInjectorConfigMap: true
+      defaultPodDisruptionBudget:
+        enabled: false
+
 {{- end }}
