--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -126,8 +126,8 @@ spec:
     global:
       jwtPolicy: first-party-jwt
       logAsJson: true
-      #omitSidecarInjectorConfigMap: true
-      #operatorManageWebhooks: true
+      defaultPodDisruptionBudget:
+        enabled: false
     pilot:
       autoscaleEnabled: false
     mixer:
