--- a/charts/kubezero-kiam/Chart.yaml
+++ b/charts/kubezero-kiam/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-kiam
 description: KubeZero Umbrella Chart for Kiam
 type: application
-version: 0.2.9
+version: 0.2.10
 appVersion: 3.6
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
@@ -18,4 +18,5 @@ dependencies:
   - name: kiam
     version: 5.8.1
     repository: https://uswitch.github.io/kiam-helm-charts/charts/
+    condition: kiam.enabled
 kubeVersion: ">= 1.16.0"
