New bootstrap flow

--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -8,22 +8,20 @@ kubezero:
     values:
       network: {{ default "vxlan" .Values.calico.network }}
       mtu: {{ default "8941" .Values.calico.mtu }}
-      prometheus: {{ .Values.metrics.ready }}
+      prometheus: {{ default .Values.metrics.enabled .Values.metrics.ready }}
   cert-manager:
     enabled: {{ index .Values "cert-manager" "enabled" }}
     values:
       # Disable all until webhook is in place
-      {{- if not ( index .Values "cert-manager" "ready" ) }}
       localCA:
-        enabled: false
-      {{- end }}
+        enabled: {{ index .Values "cert-manager" "ready" }}
       {{- if eq .Values.platform "aws" }}
       cert-manager:
         podAnnotations:
           iam.amazonaws.com/role: "{{ index .Values "cert-manager" "IamArn" }}"
       {{- end }}
 
-      {{- if .Values.kiam.ready }}
+      {{- if and .Values.kiam.enabled .Values.kiam.ready }}
       clusterIssuer:
         name: letsencrypt-dns-prod
         server: https://acme-v02.api.letsencrypt.org/directory
@@ -51,20 +49,20 @@ kubezero:
     enabled: {{ .Values.kiam.enabled }}
     values:
       kiam:
-        enabled: {{ ( not .Values.kiam.certsOnly ) }}
+        enabled: {{ not .Values.kiam.certsOnly }}
         server:
           assumeRoleArn: "{{ .Values.kiam.IamArn }}"
           deployment:
             replicas: {{ ternary 2 1 .Values.HighAvailableControlplane }}
           prometheus:
             servicemonitor:
-              enabled: {{ .Values.metrics.ready }}
+              enabled: {{ default .Values.metrics.enabled .Values.metrics.ready }}
         agent:
           prometheus:
             servicemonitor:
-              enabled: {{ .Values.metrics.ready }}
+              enabled: {{ default .Values.metrics.enabled .Values.metrics.ready }}
 
-  {{- if .Values.kiam.ready }}
+  {{- if and .Values.kiam.enabled .Values.kiam.ready }}
   # AWS only components
   aws-ebs-csi-driver:
     enabled: {{ index .Values "aws-ebs-csi-driver" "enabled" }}
@@ -102,7 +100,7 @@ kubezero:
       {{- end }}
 
   metrics:
-    enabled: {{ .Values.metrics.ready }}
+    enabled: {{ .Values.metrics.enabled }}
     values:
       {{- if and .Values.metrics.istio.grafana.enabled .Values.istio.ready }}
       grafana:
@@ -148,7 +146,7 @@ kubezero:
         {{- toYaml . | nindent 8 }}
         {{- end }}
         {{- end }}
-        prometheus: {{ .Values.metrics.ready }}
+        prometheus: {{ default .Values.metrics.enabled .Values.metrics.ready }}
 
         {{- if .Values.logging.es.s3Snapshot }}
         s3Snapshot:
@@ -168,9 +166,9 @@ kubezero:
       fluentd:
         enabled: {{ .Values.logging.fluentd.enabled }}
         metrics:
-          enabled: {{ .Values.metrics.ready }}
+          enabled: {{ default .Values.metrics.enabled .Values.metrics.ready }}
         url: {{ .Values.logging.fluentd.url }}
-        {{- if and .Values.logging.fluentd.istio .Values.istio.ready }}
+        {{- if and .Values.logging.fluentd.istio .Values.istio.enabled .Values.istio.ready }}
         istio:
           {{- with .Values.logging.fluentd.istio }}
           {{- toYaml . | nindent 10 }}
@@ -180,7 +178,7 @@ kubezero:
       fluent-bit:
         enabled: {{ index .Values.logging "fluent-bit" "enabled" }}
         metrics:
-          enabled: {{ .Values.metrics.ready }}
+          enabled: {{ default .Values.metrics.enabled .Values.metrics.ready }}
         {{- if index .Values.logging "fluent-bit" "config" }}
         config:
           {{- with index .Values.logging "fluent-bit" "config" }}
@@ -191,13 +189,13 @@ kubezero:
 argo-cd:
   controller:
     metrics:
-      enabled: {{ .Values.metrics.ready }}
+      enabled: {{ default .Values.metrics.enabled .Values.metrics.ready }}
   repoServer:
     metrics:
-      enabled: {{ .Values.metrics.ready }}
+      enabled: {{ default .Values.metrics.enabled .Values.metrics.ready }}
   server:
     metrics:
-      enabled: {{ .Values.metrics.ready }}
+      enabled: {{ default .Values.metrics.enabled .Values.metrics.ready }}
     {{- with index .Values "argo-cd" "server" }}
     {{- toYaml . | nindent 4 }}
     {{- end }}
@@ -205,7 +203,7 @@ argo-cd:
   configs:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- if and ( index .Values "argo-cd" "istio" "enabled" ) .Values.istio.ready }}
+  {{- if and ( index .Values "argo-cd" "istio" "enabled" ) .Values.istio.enabled .Values.istio.ready }}
   istio:
     {{- with index .Values "argo-cd" "istio" }}
     {{- toYaml . | nindent 4 }}
