Set global meshpolicy to prevent upgrade to http2 by default

--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -90,6 +90,7 @@ spec:
   meshConfig:
     accessLogFile: /dev/stdout
     accessLogEncoding: 'JSON'
+    h2UpgradePolicy: 'DO_NOT_UPGRADE'
   values:
     gateways:
       istio-ingressgateway:
