TCP keepalive tuning for Istio

--- a/charts/kubezero-istio/templates/istio-private-ingress.yaml
+++ b/charts/kubezero-istio/templates/istio-private-ingress.yaml
@@ -67,6 +67,10 @@ spec:
   meshConfig:
     accessLogFile: /dev/stdout
     accessLogEncoding: 'JSON'
+    h2UpgradePolicy: 'DO_NOT_UPGRADE'
+    tcpKeepalive:
+      interval: 30s
+      time: 60s
 
   values:
     gateways:
