--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -91,6 +91,9 @@ spec:
     accessLogFile: /dev/stdout
     accessLogEncoding: 'JSON'
     h2UpgradePolicy: 'DO_NOT_UPGRADE'
+    tcpKeepalive:
+      interval: 30s
+      time: 60s
   values:
     gateways:
       istio-ingressgateway:
