--- a/charts/kubezero-kiam/templates/sync-ns.yaml
+++ b/charts/kubezero-kiam/templates/sync-ns.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.annotateKubeSystemNameSpace }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -63,3 +64,4 @@ spec:
       tolerations:
       - effect: NoSchedule
         key: node-role.kubernetes.io/master
+{{- end }}
