--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -108,6 +108,7 @@ fluentd:
         port 24224
         bind 0.0.0.0
         skip_invalid_event true
+        send_keepalive_packet true
         <transport tls>
           cert_path /mnt/fluentd-certs/tls.crt
           private_key_path /mnt/fluentd-certs/tls.key
@@ -145,8 +146,8 @@ fluentd:
         request_timeout 15s
         suppress_type_name true
 
-        <buffer>
-          @type file
+        <buffer tag>
+          @type file_single
           path /var/log/fluentd-buffers/kubernetes.system.buffer
           flush_mode interval
           flush_thread_count 2
@@ -154,7 +155,6 @@ fluentd:
           flush_at_shutdown true
           retry_type exponential_backoff
           retry_timeout 60m
-          chunk_limit_size 16M
           overflow_action drop_oldest_chunk
         </buffer>
       </match>
