--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -27,13 +27,13 @@ spec:
             name: istio-ingressgateway
         {{- end }}
         env:
+        {{- if .Values.ingress.http10 }}
+        - name: ISTIO_META_HTTP10
+          value: '"1"'
+        {{- end }}
         # https://github.com/istio/istio/issues/26524, not in 1.7 !
         #- name: TERMINATION_DRAIN_DURATION_SECONDS
         #  value: "60"
-        - name: ISTIO_META_HTTP10
-          value: '"1"'
-        - name: ISTIO_META_ROUTER_MODE
-          value: standard
         #- name: ISTIO_META_IDLE_TIMEOUT
         #  value: "3600s"
         {{- if eq .Values.ingress.type "NodePort" }}
@@ -75,6 +75,13 @@ spec:
           requests:
             cpu: 100m
             memory: 128Mi
+        env:
+        - name: PILOT_ENABLE_MYSQL_FILTER
+          value: "true"
+        - name: PILOT_ENABLE_REDIS_FILTER
+          value: "true"
+        - name: PILOT_HTTP10
+          value: "true"
     policy:
       enabled: true
       k8s:
